# MCSuperCar

./: .gitignore  .gitmodules  CMakeLists.txt
Documents/: Development notes.txt
Modules/: CMakeLists.txt
Modules/gui/: CMakeLists.txt
Modules/gui/include/: DiagnosticsWindow.h  SimulationElementListModel.h  SuperCarWindow.h  supercar_gui.h
Modules/gui/source/: DiagnosticsWindow.cpp  SimulationElementListModel.cpp  SuperCarWindow.cpp  main.cpp  supercar_gui.cpp
Modules/gui/ui/: DiagnosticsWindow.ui  SuperCarWindow.ui  supercar_gui.ui
Modules/simulator/: CMakeLists.txt
Modules/simulator/include/: Logger.h  SimulatedWorld.h  SimulationController.h  SimulationElement.h  SimulationElementTriangle.h  SimulationElement_Car.h  SimulationManager.h  carMotionDynamic.h  simulationSettings.h
Modules/simulator/source/: Logger.cpp  SimulatedWorld.cpp  SimulationController.cpp  SimulationElement.cpp  SimulationElementTriangle.cpp  SimulationElement_Car.cpp  SimulationManager.cpp  carMotionDynamic.cpp  main.cpp
Modules/simulator/tests/: SimulatedWorldTests.cpp
Modules/utilities/: CMakeLists.txt
Modules/utilities/include/: Diagnostics.h  LockFreeQueue.h  Logger.h  ThreadSafeQueue.h
Modules/utilities/source/: Diagnostics.cpp  Logger.cpp  OpenGL_test.cpp
Modules/worldViewer/: CMakeLists.txt
Modules/worldViewer/graphic/CarPack001/Meshes FBX/: Compact.FBX  Minivan.FBX  Offroad.FBX  Pickup.FBX
Modules/worldViewer/include/: Definitions_CarPack001.h  Drawer.h  Drawer_Box.h  Drawer_CarPack001.h  Drawer_SimpleTerrain.h  Factory_CarPack001.h  Factory_SimpleElements.h  Scene.h  Shaders.h  WorldViewer.h  WorldViewer_Manager.h
Modules/worldViewer/source/: Definitions_CarPack001.cpp  Drawer_Box.cpp  Drawer_CarPack001.cpp  Drawer_SimpleScenario.cpp  Drawer_SimpleTerrain.cpp  Factory_CarPack001.cpp  Factory_SimpleElements.cpp  Scene.cpp  Shaders.cpp  WorldViewer.cpp  WorldViewer_Manager.cpp
Modules/world_viewer/: CMakeLists.txt
Modules/world_viewer/graphic/CarPack001/Meshes 3DS/: Compact.3DS  Coupe.3DS  Hatchback.3DS  Minivan.3DS  Offroad.3DS  Pickup.3DS  SUV.3DS  Sedan.3DS  Sport.3DS  Wagon.3DS
Modules/world_viewer/graphic/CarPack001/Meshes 3dsmax/: generic Compact.max  generic Coupe.max  generic Hatchback.max  generic Minivan.max  generic Offroad.max  generic Pickup.max  generic SUV.max  generic Sedan.max  generic Sport.max  generic Wagon.max
Modules/world_viewer/graphic/CarPack001/Meshes FBX/: Coupe.FBX  Hatchback.FBX  SUV.FBX  Sedan.FBX  Sport.FBX  Wagon.FBX
Modules/world_viewer/include/: AssimpFactory.h  BoxDrawer.h  CarPack001_defs.h  DrawersFactory.h  ElementDrawer.h  ElementOpenGLDefinitions.h  Mesh.h  Model.h  Shaders.h  SimpleCarDrawer.h  SimpleScenarioDrawer.h  ViewerManager.h  world_viewer.h
Modules/world_viewer/source/: AssimpFactory.cpp  BoxDrawer.cpp  CarPack001_defs.cpp  DrawersFactory.cpp  ElementDrawer.cpp  ElementOpenGLDefinitions.cpp  Shaders.cpp  SimpleCarDrawer.cpp  SimpleScenarioDrawer.cpp  ViewerManager.cpp  world_viewer.cpp
